--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="style.css">
     <title>Page</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         </div>
         <div id="secundario">
             <div id="img">
-                <div><img src="teste do teste/images/ZX 2K BOOST 2.0.jpeg" alt="blue" id="principal"></div>
+                <div><img src="ZX 2K BOOST 2.0.jpeg" alt="tenis" id="principal"></div>
                 <h3 class="nome">ZX 2K BOOST 2.0</h3>
                 <p class="oferta"><span class="corte">R$900</span> R$499,99</p>
                 <a href="#"><button id="detalhes" class="hvr-grow">DETALHES</button></a>
